Removed textTruncator plugin. Instead used simple truncation bound to the quantity of characters. Conflicts resolved

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -157,9 +157,6 @@ nav .menu li a:hover { text-decoration: none; }
   border-bottom: 1px dashed grey;
   padding: 10px;
 }
-.short-description{
-    height: 200px;
-}
 label, input, textarea, button{
     margin-left: 10px;
 }
